Fix checkout page inputs overflow for FireFox

--- a/frontend/src/components/CheckoutPage/CheckoutForm/styles.css
+++ b/frontend/src/components/CheckoutPage/CheckoutForm/styles.css
@@ -9,6 +9,7 @@ button {
   appearance: none;
   outline: none;
   border-style: none;
+  min-width: 0;
 }
 
 body {
